# Skity-Android

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/skity/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/skity/android/: GLFrameActivity.java  GLFrameDemoView.java  GLRenderActivity.java  GLSVGRenderActivity.java  MainActivity.java  SkityApplication.java  SkityDemoView.java  SkitySVGDemoView.java  SkityVkDemoView.java  VkFrameActivity.java  VkFrameDemoView.java  VkSVGActivity.java  VkSVGDemoView.java
app/src/main/res/layout/: activity_main2.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/skity/android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
skity/: CMakeLists.txt  build.gradle
skity/src/androidTest/java/com/skity/graphic/: ExampleInstrumentedTest.java
skity/src/cpp/: Renderer.cc  Renderer.hpp  frame_renderer.cc  frame_renderer.hpp  skity_wrapper.cc  static_renderer.cc  static_renderer.hpp  svg_renderer.cc  svg_renderer.hpp  vk_frame_renderer.cc  vk_frame_renderer.hpp  vk_renderer.cc  vk_renderer.hpp  vk_svg_renderer.cc  vk_svg_renderer.hpp
skity/src/main/: AndroidManifest.xml
skity/src/main/java/com/skity/graphic/: GLFrameRender.java  GLSVGRender.java  Renderer.java  VkFrameRender.java  VkRenderer.java  VkSVGRenderer.java
skity/src/test/java/com/skity/graphic/: ExampleUnitTest.java
